fix spacing

--- a/style.css
+++ b/style.css
@@ -1,77 +1,86 @@
 :root {
-    --main-font: 'Roboto Mono', monospace;
-    --main-color: #dcdcdc;
-    --secondary-color: #292929;
-    --font-small-mobile: 14px;
+	--main-font: "Roboto Mono", monospace;
+	--main-color: #dcdcdc;
+	--secondary-color: #292929;
+	--font-small-mobile: 14px;
 }
 
 /* -- Fonts -- */
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap");
 
 /* -- Body -- */
 body {
-	background-color: #1C1C1C;
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    z-index: -1;
+	background-color: #1c1c1c;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	z-index: -1;
 }
 
 /* -- Main -- */
 main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
 }
 
 /* -- Sub Container -- */
 .sub-container {
-    width: 100%;
-    padding: 5px 5px;
-    margin:5px 20px;
-    background: #2A2A2A;
-    border: 2px solid black;
+	width: 100%;
+	padding: 5px 5px;
+	margin: 5px 20px;
+	background: #2a2a2a;
+	border: 2px solid black;
 }
 
 /* -- Sub Container - Main -- */
 /* -- Logo -- */
 .logo {
-    width: 100%;
-    height: 50%;
-    max-width: 250px;
-    margin-top: 5px;
+	width: 100%;
+	height: 50%;
+	max-width: 250px;
+	margin-top: 5px;
 }
 
 /* -- Title, Description, About-Me -- */
-.title, .description, .about-me {
-    color: var(--main-color);
-    font-family: var(--main-font);
+.title,
+.description,
+.about-me {
+	color: var(--main-color);
+	font-family: var(--main-font);
 	margin-bottom: 25px;
 }
 
 .title a {
-    color: inherit;
-    text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
-.title a:hover, .title a:active, .title a:visited {
-    color: inherit;
+.title a:hover,
+.title a:active,
+.title a:visited {
+	color: inherit;
 }
 
 /* -- About-Me -- */
 .about-me {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 0 20px;
+	max-width: 800px;
+	margin: 0 auto;
+	padding: 0 20px;
 }
 
 .splitter {
-    border: 0;
-    height: 1px;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), var(--main-color), rgba(0, 0, 0, 0));
+	border: 0;
+	height: 1px;
+	background-image: linear-gradient(
+		to right,
+		rgba(0, 0, 0, 0),
+		var(--main-color),
+		rgba(0, 0, 0, 0)
+	);
 }
 
 /* -- Socials -- */
@@ -84,121 +93,123 @@ main {
 
 /* -- Socials -- */
 .tooltip {
-    position: absolute;
-    bottom: 100%;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: #333;
-    color: #fff;
-    padding: 5px;
-    border-radius: 5px;
-    margin-bottom: 5px;
-    font-size: 12px;
+	position: absolute;
+	bottom: 100%;
+	left: 50%;
+	transform: translateX(-50%);
+	background-color: #333;
+	color: #fff;
+	padding: 5px;
+	border-radius: 5px;
+	margin-bottom: 5px;
+	font-size: 12px;
 }
 
 /* -- Buttons -- */
 .button {
-    padding: 5px 10px;
-    background-color: var(--secondary-color);
-    border-radius: 20px;
-    position: relative;
-    display: inline-block;
-    margin-bottom: 5px;
-    vertical-align: bottom;
-    transition: all 200ms ease-in-out;
-    color: var(--main-color);
+	padding: 5px 10px;
+	background-color: var(--secondary-color);
+	border-radius: 20px;
+	position: relative;
+	display: inline-block;
+	margin-bottom: 5px;
+	vertical-align: bottom;
+	transition: all 200ms ease-in-out;
+	color: var(--main-color);
 	margin-right: 5px;
 }
 
 .button:hover {
-    transform: scale(1.1);
-    background-color: var(--main-color);
-    color: var(--secondary-color);
-    transition: all 200ms ease-in-out;
-    cursor: pointer;
+	transform: scale(1.1);
+	background-color: var(--main-color);
+	color: var(--secondary-color);
+	transition: all 200ms ease-in-out;
+	cursor: pointer;
 }
 
 /* -- Child - Projects -- */
 .projects {
-    font-family: var(--main-font);
-    padding: 2%;
-    display: flex;
-    justify-content: center;
+	font-family: var(--main-font);
+	padding: 2%;
+	display: flex;
+	justify-content: center;
 }
-.projects a:link, a:visited {
-    color: var(--main-color);
-    text-decoration: none;
+.projects a:link,
+a:visited {
+	color: var(--main-color);
+	text-decoration: none;
 }
 .projects a:hover {
-    color: #ffffff;
-    text-decoration: underline;
+	color: #ffffff;
+	text-decoration: underline;
 }
 .projects a:active {
-    color: var(--main-color);
-    text-decoration: underline;
+	color: var(--main-color);
+	text-decoration: underline;
 }
 
 /* -- Child - Footer -- */
 .footer {
-    color: var(--main-color);
-    text-decoration: none;
-    font-family: var(--main-font);
+	color: var(--main-color);
+	text-decoration: none;
+	font-family: var(--main-font);
 }
-.footer a:link, a:visited {
-    color: var(--main-color);
-    text-decoration: none;
+.footer a:link,
+a:visited {
+	color: var(--main-color);
+	text-decoration: none;
 }
 .footer a:hover {
-    color: #ffffff;
-    text-decoration: underline;
+	color: #ffffff;
+	text-decoration: underline;
 }
 .footer a:active {
-    color: var(--main-color);
-    text-decoration: underline;
+	color: var(--main-color);
+	text-decoration: underline;
 }
 
 /* -- Scrollbar -- */
 
 /* Firefox */
 * {
-    scrollbar-width: none;
-    scrollbar-color: var(--main-color) #151515;
+	scrollbar-width: none;
+	scrollbar-color: var(--main-color) #151515;
 }
 
 /* Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
-    width: 8px;
+	width: 8px;
 }
 
 *::-webkit-scrollbar-track {
-    background: #151515;
+	background: #151515;
 }
 
 *::-webkit-scrollbar-thumb {
-    background-color: var(--main-color);
-    border-radius: 5px;
-    border: 0px none #ffffff;
+	background-color: var(--main-color);
+	border-radius: 5px;
+	border: 0px none #ffffff;
 }
 
 /* -- Separator -- */
 hr.solid {
-    border-top: 1px solid rgb(255, 255, 255);
+	border-top: 1px solid rgb(255, 255, 255);
 }
 
 /* -- Scrollbar -- */
 @media screen and (max-width: 600px) {
-    main {
-        width: 90%;
-        font-size: var(--font-small-mobile);
-    }
-    .child {
-        width: 90%;
-        font-size: var(--font-small-mobile);
-    }
-    h1 {
-        font-size: 2em;
-    }
-    h5 {
-        font-size: 1em;
-    }
+	main {
+		width: 90%;
+		font-size: var(--font-small-mobile);
+	}
+	.child {
+		width: 90%;
+		font-size: var(--font-small-mobile);
+	}
+	h1 {
+		font-size: 2em;
+	}
+	h5 {
+		font-size: 1em;
+	}
 }
